--- a/productoPag.html
+++ b/productoPag.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="productoPag.html">Productos</a></li>
+          <li class="nav-item"><a class="nav-link active" href="productoPag.html">Productos</a></li>
           <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
           <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
