--- a/index2.html
+++ b/index2.html
@@ -1,101 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="images/Bati-Duoc.png">
+    <title>Bati-Duoc - Incio De sesion</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Registro de Usuario | Bati-Duoc</title>
-    <link rel="stylesheet" href="assets/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-light border-bottom">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="index.html">Bati-Duoc</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="productoPag.html">Productos</a></li>
-          <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-        </ul>
-        <div class="d-flex">
-          <div class="nav-item dropdown me-3">
-            <a class="nav-link" href="index2.html">Iniciar sesión</a>
-          </div>
-          <div class="nav-item dropdown me-3">
-            <a class="nav-link active" href="index3.html">Registrar usuario</a>
-          </div>
-          <div class="nav-item dropdown me-3">
-            <a class="nav-link position-relative" href="carrito.html">
-              <i class="bi bi-cart"></i> Cart (0)
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
-
-    <!-- FORMULARIO DE REGISTRO -->
-    <section class="d-flex justify-content-center align-items-center" style="min-height:80vh;">
-        <div class="card shadow-sm" >
-            <div class="card-header bg-light fw-bold">Registro de usuario</div>
-            <div class="card-body">
-                <form>
-                    <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre completo</label>
-                        <input type="text" class="form-control" id="nombre" required>
+    <nav class="navbar navbar-expand-lg bg-light border-bottom">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="index.html">Bati-Duoc</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productoPag.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                </ul>
+                <div class="d-flex">
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link active" href="index3.html">Registrar usuario</a>
                     </div>
-                    <div class="mb-3">
-                        <label for="correo" class="form-label">Correo</label>
-                        <input type="email" class="form-control" id="correo" required>
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link" href="index2.html">Iniciar sesión</a>
                     </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" required>
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link position-relative" href="carrito.html">
+                            <i class="bi bi-cart"></i> Cart (0)
+                        </a>
                     </div>
-                    <div class="mb-3">
-                        <label for="confirmar" class="form-label">Confirmar contraseña</label>
-                        <input type="password" class="form-control" id="confirmar" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="telefono" class="form-label">Teléfono (opcional)</label>
-                        <input type="tel" class="form-control" id="telefono">
-                    </div>
-                    <div class="row mb-3 ">
-                        <div class="col">
-                            <label for="region" class="form-label">Región</label>
-                            <select class="form-select" id="region" required>
-                                <option selected disabled>Selecciona tu región...</option>
-                                <option>Región Metropolitana de Santiago</option>
-                                <option>Región de la Araucanía</option>
-                                <option>Región de Ñuble</option>
-                            </select>
-                        </div>
-                        <div class="col">
-                            <label for="comuna" class="form-label">Comuna</label>
-                            <select class="form-select" id="comuna" required>
-                                <option selected disabled>Selecciona tu comuna...</option>
-                                <option>Limache</option>
-                                <option>Lampa</option>
-                                <option>Concepción</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="d-grid form">
-                        <button type="submit" class="btn btn-dark">Registrar</button>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
-    </section>
+    </nav>
+
+    <!-- Inicio de sesion de usuario -->
+    <div class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center mb-4">
+                <div class="mx-auto mb-3"
+                    style="width:120px;height:120px;border:2px solid #333;display:flex;align-items:center;justify-content:center;">
+                    <a href="images"></a>
+                </div>
+                <h1 class="fw-bold mb-4">Bati-Duoc</h1>
+            </div>
+            <div class="col-md-6">
+                <div class="card border">
+                    <div class="card-header bg-light fw-bold">Iniciar Sesión</div>
+                    <div class="card-body bg-light">
+                        <form>
+                            <div class="mb-3">
+                                <label for="nombre" class="form-label">Correo</label>
+                                <input type="text" class="form-control" id="nombre" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Contraseña</label>
+                                <input type="password" class="form-control" id="password" required>
+                            </div>
+                            <div class="d-grid mt-4">
+                                <button type="submit" class="btn btn-dark btn-lg">¡Iniciar Sesión!</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER BASE -->
     <footer class="bg-light border-top py-4 mt-5">
@@ -125,17 +104,18 @@
             <p class="mb-1">&copy; 2024 Bati-Duoc. Todos los derechos reservados.</p>
         </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    // Suma la cantidad total de unidades
-    const totalUnits = cart.reduce((sum, item) => sum + item.quantity, 0);
-    const cartCountElement = document.querySelector('.nav-link .bi-cart').nextSibling;
-    if (cartCountElement) {
-      cartCountElement.textContent = ` Cart (${totalUnits})`;
-    }
-  });
-</script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const cart = JSON.parse(localStorage.getItem('cart')) || [];
+        // Suma la cantidad total de unidades
+        const totalUnits = cart.reduce((sum, item) => sum + item.quantity, 0);
+        const cartCountElement = document.querySelector('.nav-link .bi-cart').nextSibling;
+        if (cartCountElement) {
+          cartCountElement.textContent = ` Cart (${totalUnits})`;
+        }
+      });
+    </script>
 </body>
+
 </html>
